--- a/content/html/scoreboard.html
+++ b/content/html/scoreboard.html
@@ -18,9 +18,10 @@
     <script src="riotjs/scoreboard.tag" type="riot/tag"></script>
 
     <style type="text/css">
-        body {
+        html, body {
             background-color: transparent;
             height: 100%;
+            overflow: hidden;
         }
 
         .image {
