disable test mode by default -- would b enice to detect if we're in browser or not automatically.. hmm...

--- a/content/html/scoreboard.html
+++ b/content/html/scoreboard.html
@@ -60,7 +60,9 @@
                 }
             }
         }
-        enter_test_mode()
+
+        // UNCOMMENT to enter test mode when using a browser window!
+        //enter_test_mode()
     </script>
 </head>
 <body>
