better examples, better aligning

--- a/content/html/scoreboard.html
+++ b/content/html/scoreboard.html
@@ -46,15 +46,21 @@
                         name: "Oj",
                         score: "0",
                         team_members: [{
+                            nick: "Testerino",
+                            steamid: "0:0:123321313",
                             frags: 0,
-                            deaths: 0
+                            deaths: 0,
+                            ping: 20
                         }]
                     }, {
                         name: "Blue with some words",
                         score: "0",
                         team_members: [{
+                            nick: "Testerino",
+                            steamid: "123asdf",
                             frags: 0,
-                            deaths: 0
+                            deaths: 0,
+                            ping: 43
                         }]
                     }])
                 }
