using simple find + replace for base template, relative paths broken though

--- a/content/html/base.html
+++ b/content/html/base.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="content/html/css/semantic.min.css">
 
     <!-- JS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/semantic.min.js"></script>
-    <script src="js/riot+compiler.min.js"></script>
+    <script src="content/html/js/jquery.min.js"></script>
+    <script src="content/html/js/semantic.min.js"></script>
+    <script src="content/html/js/riot+compiler.min.js"></script>
 
     <!-- Riot tags -->
-    <script src="riotjs/scoreboard.tag" type="riot/tag"></script>
+    <script src="content/html/riotjs/scoreboard.tag" type="riot/tag"></script>
 </head>
 <body>
     {*view*}
