--- a/content/html/hud.html
+++ b/content/html/hud.html
@@ -27,6 +27,20 @@
             overflow: hidden;
         }
 
+        .header-text {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background-color: transparent !important;
+            -webkit-user-select: none;
+            -webkit-font-smoothing: antialiased;
+            outline: none;
+
+            text-shadow:
+                -1px -1px 0 #000,
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
+        }
+
         .toast {
             border-radius: 0 !important;
             box-shadow: none !important;
