--- a/content/html/hud.html
+++ b/content/html/hud.html
@@ -19,6 +19,7 @@
     <!-- Riot tags -->
     <script src="riotjs/health-and-armor.tag" type="riot/tag"></script>
     <script src="riotjs/scoreboard.tag" type="riot/tag"></script>
+    <script src="riotjs/research-menu.tag" type="riot/tag"></script>
 
     <style>
         html, body {
@@ -68,6 +69,8 @@
 <health-and-armor></health-and-armor>
 
 <scoreboard></scoreboard>
+
+<research-menu></research-menu>
 
 <script>
     var EVENTS = riot.observable()
