--- a/content/html/hud.html
+++ b/content/html/hud.html
@@ -26,6 +26,7 @@
             background-color: transparent;
             height: 100%;
             overflow: hidden;
+            position: relative;
         }
 
         .header-text {
@@ -54,7 +55,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 10%;
+            width: 300px;
         }
 
         scoreboard {
@@ -79,9 +80,6 @@
     $(document).ready(function () {
         // For quicker testing locally, but we try again in a second or two anyway
         riot.mount('*')
-        setTimeout(function () {
-            riot.mount('*')
-        }, 1000)
 
         window.IS_IN_GAME = window.navigator.userAgent.indexOf("Valve Source Client") > 0
     })
