--- a/content/html/hud.html
+++ b/content/html/hud.html
@@ -43,7 +43,7 @@
 
 
     <!-- Riot tags -->
-    <script src="riotjs/health-and-armor.tag" type="riot/tag"></script>
+    <script src="riotjs/heads-up-display.tag" type="riot/tag"></script>
     <script src="riotjs/time-left.tag" type="riot/tag"></script>
     <script src="riotjs/scoreboard.tag" type="riot/tag"></script>
     <script src="riotjs/research-menu.tag" type="riot/tag"></script>
@@ -78,7 +78,7 @@
             background-color: #225222;
         }
 
-        health-and-armor {
+        heads-up-display {
             position: absolute;
             bottom: 0;
             left: 0;
@@ -113,7 +113,7 @@
 </head>
 <body>
 
-<health-and-armor></health-and-armor>
+<heads-up-display></heads-up-display>
 
 <time-left></time-left>
 
