Too many changes to list. Complete re-factor, of objects, etc

--- a/content/html/hud.html
+++ b/content/html/hud.html
@@ -95,7 +95,7 @@
             position: fixed;
             /*width: 50%;*/
             /*top: 0;*/
-            left: 22%;
+            left: 24%;
             /*!*left: 45vw;*!*/
             /*!*right: 45vw;*!*/
             bottom: 0;
@@ -136,6 +136,25 @@
 
         window.IS_IN_GAME = window.navigator.userAgent.indexOf("Valve Source Client") > 0
     })
+
+    String.prototype.toMMSS = function () {
+        var sec_num = parseInt(this, 10); // don't forget the second param
+        var hours = Math.floor(sec_num / 3600);
+        var minutes = Math.floor((sec_num - (hours * 3600)) / 60);
+        var seconds = sec_num - (hours * 3600) - (minutes * 60);
+
+        if (hours < 10) {
+            hours = "0" + hours;
+        }
+        if (minutes < 10) {
+            minutes = "0" + minutes;
+        }
+        if (seconds < 10) {
+            seconds = "0" + seconds;
+        }
+        return minutes + ':' + seconds;
+    }
+
 </script>
 </body>
 </html>
